<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".up.IntroActivity">

    <ImageView
        android:id="@+id/iv_intro"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ic_intro_1"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name"/>

    <com.confirmu.up.custom_views.RegularTextView
        android:id="@+id/iv_next"
        android:layout_width="233dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:background="@drawable/white_border"
        android:gravity="center"
        android:minWidth="180dp"
        android:text="@string/lets_go"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="18sp"
        tools:text="@string/intro_1_title" />

    <TextView
        android:id="@+id/subtitle_text"
        android:layout_below="@+id/title_text"
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="14sp"
        tools:text="@string/intro_1_subtitle" />

</RelativeLayout>