<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/selected_bg_img"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
       <com.confirmu.up.custom_views.RegularTextView
           android:id="@+id/tv_no"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="wrap_content"
           android:background="@drawable/option_left_ripple"
           android:text="@string/no"
           android:gravity="center"
           android:textSize="16sp"
           android:padding="15dp"
           android:layout_marginEnd="16dp"
           android:textColor="@color/black"
           android:layout_marginTop="12dp"
           android:layout_marginBottom="12dp"/>

       <com.confirmu.up.custom_views.RegularTextView
           android:id="@+id/tv_yes"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:layout_height="wrap_content"
           android:background="@drawable/option_right_ripple"
           android:text="@string/yes"
           android:gravity="center"
           android:textSize="16sp"
           android:padding="15dp"
           android:layout_marginStart="16dp"
           android:textColor="@color/colorPrimary"
           android:layout_marginTop="12dp"
           android:layout_marginBottom="12dp"/>
   </LinearLayout>

    <com.confirmu.up.custom_views.RegularTextView
        android:id="@+id/tv_check_jobs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/choose_option_ripple"
        android:text="@string/check_jobs"
        android:gravity="center"
        android:textSize="14sp"
        android:padding="8dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"/>

</LinearLayout>