<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    app:cardCornerRadius="5dp">


    <LinearLayout
        android:id="@+id/verified_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_person"
            android:background="@drawable/circle"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"/>

        <com.confirmu.up.custom_views.SemiBoldTextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="User Name"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="16dp"/>

        <com.confirmu.up.custom_views.RegularTextView
            android:id="@+id/description_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/result_description"
            android:gravity="center_horizontal"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="13sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="20dp"/>

        <com.confirmu.up.custom_views.RegularTextView
            android:id="@+id/description_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/result_description_two"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="13sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="20dp">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.confirmu.up.custom_views.RegularTextView
                    android:id="@+id/tv_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="54"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:layout_marginTop="5dp"/>

                <com.confirmu.up.custom_views.SemiBoldTextView
                    android:id="@+id/tv_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_score"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="15sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="invisible">
                <com.confirmu.up.custom_views.RegularTextView
                    android:id="@+id/tv_word_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="24"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    android:layout_marginTop="5dp"/>
                <com.confirmu.up.custom_views.RegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/word_count"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.confirmu.up.custom_views.RegularTextView
                    android:id="@+id/tv_social_accounts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    android:layout_marginTop="5dp"/>
                <com.confirmu.up.custom_views.RegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/social_accounts"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>

        <com.confirmu.up.custom_views.SemiBoldTextView
            android:id="@+id/tv_submit_verified"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_refresh"
            app:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:padding="10dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/ripple_button"/>



    </LinearLayout>




</android.support.v7.widget.CardView>
