<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    app:cardCornerRadius="5dp"
    android:layout_margin="10dp">



    <LinearLayout
        android:id="@+id/completed_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:visibility="visible">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="horizontal"
           android:layout_marginTop="@dimen/review_margin"
           android:layout_marginBottom="@dimen/review_margin">
           <com.confirmu.up.custom_views.RegularTextView
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:textSize="13sp"
               android:text="@string/text_name"/>

           <LinearLayout
               android:layout_width="0dp"
               android:layout_weight="1"
               android:layout_height="wrap_content"
               android:orientation="vertical">
               <com.confirmu.up.custom_views.RegularTextView
                   android:id="@+id/tv_name"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="vidivn vnidvnd"
                   android:textSize="13sp"/>
               <View
                   android:layout_width="match_parent"
                   android:layout_height="0.5dp"
                   android:background="#99a1a1a1"/>
           </LinearLayout>
       </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/review_margin"
            android:layout_marginBottom="@dimen/review_margin">
            <com.confirmu.up.custom_views.RegularTextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:text="@string/text_email"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.confirmu.up.custom_views.RegularTextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="djskcd@kcn.ccnd"
                    android:textSize="13sp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#99a1a1a1"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/review_margin"
            android:layout_marginBottom="@dimen/review_margin">
            <com.confirmu.up.custom_views.RegularTextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:text="@string/text_gender"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.confirmu.up.custom_views.RegularTextView
                    android:id="@+id/tv_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:textSize="13sp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#99a1a1a1"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/review_margin"
            android:layout_marginBottom="@dimen/review_margin">
            <com.confirmu.up.custom_views.RegularTextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:text="@string/text_marital_status"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.confirmu.up.custom_views.RegularTextView
                    android:id="@+id/tv_married"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/married"
                    android:textSize="13sp"/>N
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#99a1a1a1"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/review_margin"
            android:layout_marginBottom="@dimen/review_margin">
            <com.confirmu.up.custom_views.RegularTextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:text="@string/text_age"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.confirmu.up.custom_views.RegularTextView
                    android:id="@+id/tv_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="21"
                    android:textSize="13sp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#99a1a1a1"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/review_margin"
            android:layout_marginBottom="@dimen/review_margin">
            <com.confirmu.up.custom_views.RegularTextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:text="@string/text_kids"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.confirmu.up.custom_views.RegularTextView
                    android:id="@+id/tv_kids"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1"
                    android:textSize="13sp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="#99a1a1a1"/>
            </LinearLayout>
        </LinearLayout>



    </LinearLayout>



</android.support.v7.widget.CardView>
